--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DeployBeta",
+  "name": "linas-hermanas-soundboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
