--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "http-server -c-1",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
